force-app/main/default/objects/Empreendimento__c/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>Bairro do Empreendimento</description>
    <label>Bairro</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>