force-app/main/default/objects/Empreendimento__c/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <label>Complemento</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>