force-app/main/default/objects/Empreendimento__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <description>CidadeEstado/Pais do Empreendimento</description>
    <label>Logradouro</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>